fix: fixed bugs on mobile

--- a/app/sass/base/_helpers.scss
+++ b/app/sass/base/_helpers.scss
@@ -6,6 +6,10 @@
   justify-content: center;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-between {
   justify-content: space-between;
 }
