--- a/app/sass/components/_hamburger.scss
+++ b/app/sass/components/_hamburger.scss
@@ -9,6 +9,7 @@
   font: inherit;
   color: inherit;
   text-transform: none;
+  line-height: 0;
   background-color: transparent;
   border: 0;
   margin: 0;
