--- a/app/sass/layout/_footer.scss
+++ b/app/sass/layout/_footer.scss
@@ -5,11 +5,13 @@
   font-size: 1.3rem;
 
   &__top {
+    padding: 0 1.5rem;
     padding-bottom: 2.6rem;
     border-bottom: 1px solid #898989;
   }
 
   &__bottom {
+    padding: 0 1.5rem;
     padding-top: 1.9rem;
   }
 
