--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -127,6 +127,10 @@
   &__btn {
     min-width: 23rem;
   }
+
+  .contacts {
+    margin-right: 5px;
+  }
 }
 
 .logo {
