--- a/app/sass/layout/_price.scss
+++ b/app/sass/layout/_price.scss
@@ -28,6 +28,7 @@
     }
 
     @media (max-width: 998px) {
+      display: block;
       min-height: 35.5rem !important;
     }
   }
